--- a/_posts/2024-01-25-PKHelp2024.md
+++ b/_posts/2024-01-25-PKHelp2024.md
@@ -1,6 +1,6 @@
 ---
 layout: post  
-title: Cracow University of Technology - External examiners 
+title: Cracow University of Technology - External examiner 
 date: 2024-01-25 12:00:00
 author: Julian
 ---
@@ -8,10 +8,11 @@ author: Julian
 
 <!--excerpt-->
 
-I had an opportunity to serve as an External Examiner at Politechnika Krakowska.As always meeting with future architects was an absolute pleasure. I hope I managed to influence some of them to keep going ;)
+I had an opportunity to serve as an external examiner at Politechnika Krakowska. As always meeting with future architects was an absolute pleasure. I hope I managed to influence some of them to keep going ;)
 
-below the translation to English done by Copilot:
-
+Below the translation of this letter to English done by Copilot:
+  
+<blockquote>
 Department of History of Architecture and Conservation of Monuments A-01 Faculty of Architecture at the Cracow University of Technology
 
 Cracow, January 25, 2024
@@ -33,3 +34,4 @@ and
 Project Group Leader Dr. inż. arch. Jacek Czubiński, prof. PK
 
 Department of History of Architecture and Conservation of Monuments ul. Kanonicza 1 31-002 Kraków
+<blockquote>
